src/main/java/KotlinParser.java
// Generated from KotlinParser.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class KotlinParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		NUM=1, WS=2, NEWLINE=3, DOTDOTDOT=4, DOT=5, COMMA=6, LPAREN=7, LSQUARE=8, 
		LCURL=9, RCURL=10, MULT=11, MOD=12, DIV=13, ADD=14, SUB=15, INCR=16, DECR=17, 
		LAND=18, LOR=19, NOT=20, COLON=21, SEMICOLON=22, ASSIGN=23, ADD_ASSIGN=24, 
		SUB_ASSIGN=25, MULT_ASSIGN=26, DIV_ASSIGN=27, MOD_ASSIGN=28, ARR=29, DBL_ARR=30, 
		RANGE=31, DBLCOLON=32, QUECOLON=33, DBL_SEMICOLON=34, QUEST=35, LESS=36, 
		GREATER=37, LEQ=38, GEQ=39, NEQ=40, NDBLEQ=41, DBLEQ=42, TRIEQ=43, SINGLE_QUOTE=44, 
		PACKAGE=45, IMPORT=46, CLASS=47, INTERFACE=48, FUN=49, OBJECT=50, VAL=51, 
		VAR=52, IF=53, ELSE=54, FOR=55, DO=56, WHILE=57, CONTINUE=58, BREAK=59, 
		RETURN=60, CONSTRUCTOR=61, BY=62, INIT=63, WHERE=64, WHEN=65, IS=66, NIS=67, 
		DT=68, AS=69, IN=70, NIN=71, STEP=72, GETTER=73, SETTER=74, PUBLIC=75, 
		PRIVATE=76, PROTECTED=77, INTERNAL=78, EXTERNAL=79, ABSTRACT=80, OVERRIDE=81, 
		OPERATOR=82, INLINE=83, FINAL=84, OPEN=85, CONST=86, THROW=87, BoolLit=88, 
		NullLit=89, ID=90, LNGCmt=91, LineCmt=92, QUOTE_OPN=93, RPAREN=94, RSQUARE=95, 
		Paren_Cmt=96, Paren_WS=97, Paren_NEWLINE=98, QUOTE_CLS=99, Str_Exp=100, 
		Str_Idf=101, Str_Text=102, Str_Esc=103, StrExpression_Cmt=104, StrExpression_WS=105, 
		StrExpression_NEWLINE=106;
	public static final int
		RULE_prog = 0, RULE_packages = 1, RULE_imports = 2, RULE_id = 3, RULE_funDecl = 4, 
		RULE_funParam = 5, RULE_decFunParam = 6, RULE_funBody = 7, RULE_type = 8, 
		RULE_block = 9, RULE_expr = 10, RULE_juncExpr = 11, RULE_eqExpr = 12, 
		RULE_compExpr = 13, RULE_iExpr = 14, RULE_qcolExpr = 15, RULE_rangeExpr = 16, 
		RULE_additExpr = 17, RULE_multExpr = 18, RULE_idxExpr = 19, RULE_prefExpr = 20, 
		RULE_targ = 21, RULE_postUExpr = 22, RULE_callExpr = 23, RULE_dotExpr = 24, 
		RULE_lamdaBody = 25, RULE_assignOp = 26, RULE_rangeOp = 27, RULE_eqOp = 28, 
		RULE_compOp = 29, RULE_lOp = 30, RULE_isOp = 31, RULE_inOp = 32, RULE_additOp = 33, 
		RULE_multOp = 34, RULE_asOp = 35, RULE_prefixUOp = 36, RULE_postfixUOp = 37, 
		RULE_decl = 38, RULE_classDecl = 39, RULE_classSpecf = 40, RULE_classParams = 41, 
		RULE_classParam = 42, RULE_classbody = 43, RULE_valDecl = 44, RULE_multiValDecl = 45, 
		RULE_assn = 46, RULE_state = 47, RULE_cngLine = 48, RULE_strings = 49, 
		RULE_texts = 50, RULE_strExpr = 51, RULE_ifExpr = 52, RULE_contrBody = 53, 
		RULE_jumpExpr = 54, RULE_loopExpr = 55, RULE_forExpr = 56, RULE_whileExpr = 57, 
		RULE_doExpr = 58, RULE_whenExpr = 59, RULE_arrExpr = 60, RULE_testExpr = 61, 
		RULE_inp = 62, RULE_idNum = 63, RULE_modLit = 64;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "packages", "imports", "id", "funDecl", "funParam", "decFunParam", 
			"funBody", "type", "block", "expr", "juncExpr", "eqExpr", "compExpr", 
			"iExpr", "qcolExpr", "rangeExpr", "additExpr", "multExpr", "idxExpr", 
			"prefExpr", "targ", "postUExpr", "callExpr", "dotExpr", "lamdaBody", 
			"assignOp", "rangeOp", "eqOp", "compOp", "lOp", "isOp", "inOp", "additOp", 
			"multOp", "asOp", "prefixUOp", "postfixUOp", "decl", "classDecl", "classSpecf", 
			"classParams", "classParam", "classbody", "valDecl", "multiValDecl", 
			"assn", "state", "cngLine", "strings", "texts", "strExpr", "ifExpr", 
			"contrBody", "jumpExpr", "loopExpr", "forExpr", "whileExpr", "doExpr", 
			"whenExpr", "arrExpr", "testExpr", "inp", "idNum", "modLit"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'...'", "'.'", "','", "'('", "'['", "'{'", "'}'", 
			"'*'", "'%'", "'/'", "'+'", "'-'", "'++'", "'--'", "'&&'", "'||'", "'!'", 
			"':'", "';'", "'='", "'+='", "'-='", "'*='", "'/='", "'%='", "'->'", 
			"'=>'", "'..'", "'::'", "'?:'", "';;'", "'?'", "'<'", "'>'", "'<='", 
			"'>='", "'!='", "'!=='", "'=='", "'==='", "'''", "'package'", "'import'", 
			"'class'", "'interface'", "'fun'", "'object'", "'val'", "'var'", "'if'", 
			"'else'", "'for'", "'do'", "'while'", "'continue'", "'break'", "'return'", 
			"'constructor'", "'by'", "'init'", "'where'", "'when'", "'is'", "'!is'", 
			"'downTo'", "'as'", "'in'", "'!in'", "'step'", "'get'", "'set'", "'public'", 
			"'private'", "'protected'", "'internal'", "'external'", "'abstract'", 
			"'override'", "'operator'", "'inline'", "'final'", "'open'", "'const'", 
			"'throw'", null, "'null'", null, null, null, null, "')'", "']'", null, 
			null, null, null, "'${'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "NUM", "WS", "NEWLINE", "DOTDOTDOT", "DOT", "COMMA", "LPAREN", 
			"LSQUARE", "LCURL", "RCURL", "MULT", "MOD", "DIV", "ADD", "SUB", "INCR", 
			"DECR", "LAND", "LOR", "NOT", "COLON", "SEMICOLON", "ASSIGN", "ADD_ASSIGN", 
			"SUB_ASSIGN", "MULT_ASSIGN", "DIV_ASSIGN", "MOD_ASSIGN", "ARR", "DBL_ARR", 
			"RANGE", "DBLCOLON", "QUECOLON", "DBL_SEMICOLON", "QUEST", "LESS", "GREATER", 
			"LEQ", "GEQ", "NEQ", "NDBLEQ", "DBLEQ", "TRIEQ", "SINGLE_QUOTE", "PACKAGE", 
			"IMPORT", "CLASS", "INTERFACE", "FUN", "OBJECT", "VAL", "VAR", "IF", 
			"ELSE", "FOR", "DO", "WHILE", "CONTINUE", "BREAK", "RETURN", "CONSTRUCTOR", 
			"BY", "INIT", "WHERE", "WHEN", "IS", "NIS", "DT", "AS", "IN", "NIN", 
			"STEP", "GETTER", "SETTER", "PUBLIC", "PRIVATE", "PROTECTED", "INTERNAL", 
			"EXTERNAL", "ABSTRACT", "OVERRIDE", "OPERATOR", "INLINE", "FINAL", "OPEN", 
			"CONST", "THROW", "BoolLit", "NullLit", "ID", "LNGCmt", "LineCmt", "QUOTE_OPN", 
			"RPAREN", "RSQUARE", "Paren_Cmt", "Paren_WS", "Paren_NEWLINE", "QUOTE_CLS", 
			"Str_Exp", "Str_Idf", "Str_Text", "Str_Esc", "StrExpression_Cmt", "StrExpression_WS", 
			"StrExpression_NEWLINE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "KotlinParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public KotlinParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public ImportsContext imports() {
			return getRuleContext(ImportsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(KotlinParser.EOF, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(KotlinParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(KotlinParser.NEWLINE, i);
		}
		public PackagesContext packages() {
			return getRuleContext(PackagesContext.class,0);
		}
		public List<StateContext> state() {
			return getRuleContexts(StateContext.class);
		}
		public StateContext state(int i) {
			return getRuleContext(StateContext.class,i);
		}
		public List<CngLineContext> cngLine() {
			return getRuleContexts(CngLineContext.class);
		}
		public CngLineContext cngLine(int i) {
			return getRuleContext(CngLineContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KotlinParserListener ) ((KotlinParserListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KotlinParserListener ) ((KotlinParserListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(130);
					match(NEWLINE);
					}
					} 
				}
				setState(135);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(137);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PACKAGE) {
				{
				setState(136);
				packages();
				}
			}

			setState(142);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(139);
					match(NEWLINE);
					}
					} 
				}
				setState(144);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(145);
			imports();
			setState(149);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(146);
					match(NEWLINE);
					}
					} 
				}
				setState(151);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(158);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					{
					setState(152);
					state();
					}
					setState(154);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
					case 1:
						{
						setState(153);
						cngLine();
						}
						break;
					}
					}
					} 
				}
				setState(160);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			setState(164);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(161);
				match(NEWLINE);
				}
				}
				setState(166);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(167);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PackagesContext extends ParserRuleContext {
		public TerminalNode PACKAGE() { return getToken(KotlinParser.PACKAGE, 0); }
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TerminalNode DOT() { return getToken(KotlinParser.DOT, 0); }
		public TerminalNode MULT() { return getToken(KotlinParser.MULT, 0); }
		public TerminalNode SEMICOLON() { return getToken(KotlinParser.SEMICOLON, 0); }
		public PackagesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_packages; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KotlinParserListener ) ((KotlinParserListener)listener).enterPackages(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KotlinParserListener ) ((KotlinParserListener)listener).exitPackages(this);
		}
	}

	public final PackagesContext packages() throws RecognitionException {
		PackagesContext _localctx = new PackagesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_packages);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(169);
			match(PACKAGE);
			setState(170);
			id();
			setState(173);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DOT) {
				{
				setState(171);
				match(DOT);
				setState(172);
				match(MULT);
				}
			}

			setState(176);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEMICOLON) {
				{
				setState(175);
				match(SEMICOLON);
				}
			}

			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportsContext extends ParserRuleContext {
		public List<TerminalNode> IMPORT() { return getTokens(KotlinParser.IMPORT); }
		public TerminalNode IMPORT(int i) {
			return getToken(KotlinParser.IMPORT, i);
		}
		public List<IdContext> id() {
			return getRuleContexts(IdContext.class);
		}
		public IdContext id(int i) {
			return getRuleContext(IdContext.class,i);
		}
		public List<TerminalNode> DOT() { return getTokens(KotlinParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(KotlinParser.DOT, i);
		}
		public List<TerminalNode> MULT() { return getTokens(KotlinParser.MULT); }
		public TerminalNode MULT(int i) {
			return getToken(KotlinParser.MULT, i);
		}
		public List<TerminalNode> AS() { return getTokens(KotlinParser.AS); }
		public TerminalNode AS(int i) {
			return getToken(KotlinParser.AS, i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(KotlinParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(KotlinParser.SEMICOLON, i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(KotlinParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(KotlinParser.NEWLINE, i);
		}
		public ImportsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_imports; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KotlinParserListener ) ((KotlinParserListener)listener).enterImports(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KotlinParserListener ) ((KotlinParserListener)listener).exitImports(this);
		}
	}

	public final ImportsContext imports() throws RecognitionException {
		ImportsContext _localctx = new ImportsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_imports);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(197);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT) {
				{
				{
				setState(178);
				match(IMPORT);
				setState(179);
				id();
				setState(184);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case DOT:
					{
					setState(180);
					match(DOT);
					setState(181);
					match(MULT);
					}
					break;
				case AS:
					{
					setState(182);
					match(AS);
					setState(183);
					id();
					}
					break;
				case EOF:
				case NUM:
				case NEWLINE:
				case LPAREN:
				case ADD:
				case SUB:
				case INCR:
				case DECR:
				case NOT:
				case SEMICOLON:
				case IMPORT:
				case CLASS:
				case INTERFACE:
				case FUN:
				case VAL:
				case VAR:
				case IF:
				case FOR:
				case DO:
				case WHILE:
				case CONTINUE:
				case BREAK:
				case RETURN:
				case CONSTRUCTOR:
				case INIT:
				case WHEN:
				case PUBLIC:
				case PRIVATE:
				case PROTECTED:
				case INTERNAL:
				case EXTERNAL:
				case ABSTRACT:
				case OVERRIDE:
				case OPERATOR:
				case INLINE:
				case FINAL:
				case OPEN:
				case CONST:
				case THROW:
				case NullLit:
				case ID:
				case QUOTE_OPN:
					break;
				default:
					break;
				}
				setState(187);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SEMICOLON) {
					{
					setState(186);
					match(SEMICOLON);
					}
				}

				setState(192);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(189);
						match(NEWLINE);
						}
						} 
					}
					setState(194);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
				}
				}
				}
				setState(199);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(KotlinParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(KotlinParser.ID, i);
		}
		public List<TerminalNode> DOT() { return getTokens(KotlinParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(KotlinParser.DOT, i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(KotlinParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(KotlinParser.NEWLINE, i);
		}
		public TerminalNode NullLit() { return getToken(KotlinParser.NullLit, 0); }
		public IdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KotlinParserListener ) ((KotlinParserListener)listener).enterId(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KotlinParserListener ) ((KotlinParserListener)listener).exitId(this);
		}
	}

	public final IdContext id() throws RecognitionException {
		IdContext _localctx = new IdContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_id);
		int _la;
		try {
			int _alt;
			setState(215);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(200);
				match(ID);
				setState(211);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(204);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==NEWLINE) {
							{
							{
							setState(201);
							match(NEWLINE);
							}
							}
							setState(206);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						setState(207);
						match(DOT);
						setState(208);
						match(ID);
						}
						} 
					}
					setState(213);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
				}
				}
				break;
			case NullLit:
				enterOuterAlt(_localctx, 2);
				{
				setState(214);
				match(NullLit);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunDeclContext extends ParserRuleContext {
		public FunParamContext funParam() {
			return getRuleContext(FunParamContext.class,0);
		}
		public TerminalNode INIT() { return getToken(KotlinParser.INIT, 0); }
		public TerminalNode CONSTRUCTOR() { return getToken(KotlinParser.CONSTRUCTOR, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(KotlinParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(KotlinParser.NEWLINE, i);
		}
		public TerminalNode COLON() { return getToken(KotlinParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public FunBodyContext funBody() {
			return getRuleContext(FunBodyContext.class,0);
		}
		public TerminalNode FUN() { return getToken(KotlinParser.FUN, 0); }
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public FunDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KotlinParserListener ) ((KotlinParserListener)listener).enterFunDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KotlinParserListener ) ((KotlinParserListener)listener).exitFunDecl(this);
		}
	}

	public final FunDeclContext funDecl() throws RecognitionException {
		FunDeclContext _localctx = new FunDeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_funDecl);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(237);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NEWLINE:
			case LPAREN:
			case FUN:
			case NullLit:
			case ID:
				{
				setState(218);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==FUN) {
					{
					setState(217);
					match(FUN);
					}
				}
